@@ -1,3 +1,8 @@
+(11/01/15)
+==========
+
+· Added Info > Lynis (security auditing tool)
+
 (29/12/14)
 ==========
 
